fix(ChatExtraInfo): Vertically align empty icon when media is not available

--- a/src/Components/ChatComponent/chat.css
+++ b/src/Components/ChatComponent/chat.css
@@ -532,3 +532,7 @@ input:checked + .slider:before {
 .chat-close-button:hover {
   color: #000;
 }
+
+.chat-extra-info-scroll-area > div > div {
+  height: calc(100% - 50px);
+}
